# wasm-r3

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  build.js  build.ts  evaluation.bak.json  evaluation.json  failures.md  install_engines.sh  package-lock.json  package.json  project.md  stats.json  temp-trace-1.r3  test.js  test.wasm  todo.md  trace.d.cts  trace.md  tsconfig.json  wasabi.d.cts  wasm-r3.session.sql  wasm-slice  websites.md
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
benchmarks/: bullet.wasm  factorial.wasm  fail.wasm  game-of-life.wasm  guiicons.wasm  hydro.wasm  mandelbrot.wasm  pacalc.wasm  pass.wasm  rfxgen.wasm  rguilayout.wasm  rtexpacker.wasm  rtexviewer.wasm  (+1 more)
crates/replay_gen/: Cargo.toml  rustfmt.toml
crates/replay_gen/src/: codegen.rs  irgen.rs  jsgen.rs  lib.rs  main.rs  opt.rs  trace.rs  trace_optimisation.rs  wasmgen.rs
crates/tracer/: Cargo.toml
crates/tracer/src/: lib.rs  main.rs
crates/tracer/tests/: align-instrumented.wasm  align-instrumented.wat  align.wasm  align.wat  block-instrumented.wasm  block.wasm  block.wat  call-indirect-complex.wasm  call-indirect.wasm  call-instrumented.wasm  call.wasm  call.wat  call_indirect-instrumented.wasm  call_indirect.wasm  call_indirect.wat  elem.wasm  elem.wat  fib.wasm  fib.wat  funcy-kart.wasm  funky-kart-instrumented.wasm  funky-kart.wasm  generated.wasm  generated.wat  glob-exp-not-mut.wasm  global-imp.wasm  global_get-instrumented.wasm  global_get.wasm  global_get.wat  global_set.wasm  global_set.wat  gol-instrumented.wasm  gol-instrumented.wat  gol.wasm  gol.wat  handy.wasm  heatmap.wasm  high-func.wasm  image-convolute.wasm  image-convolute.wat  (+30 more)
(+1595 files in other folders)
