[package]
name = "replay_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tempfile = "3.2.0"
walrus = "0.20.3"
wasmprinter = "0.2.75"
wat = "1.0.82"
num-traits = "0.2"
num-derive = "0.4"