[package]
name = "tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
# path = "src/lib.rs"

[[bin]]
name = "tracer"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.4"
walrus = "0.20.3"
anyhow = "1.0.75"